--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 45px;
 }
 
 h2 {
@@ -65,5 +65,37 @@ p {
     background-image: url(images/dream-bg.png);
     background-position: right;
     background-repeat: no-repeat;
+    margin-bottom: 70px;
 
+}
+
+.ex-child {
+    background-image: url(images/exp-bg.png);
+    /* background-position: left; */
+    background-repeat: no-repeat;
+}
+
+.ex-child {
+    display: flex;
+}
+
+.ex-common {
+    box-shadow: 1px 5px 25px 20px rgb(96, 92, 92);
+    margin: 40px;
+    width: 50%;
+    margin-left: 60px;
+    border-radius: 7px;
+    padding: 35px;
+}
+
+.ex-child-one {
+    border-left: 7px solid green;
+}
+
+.ex-child-two {
+    border-left: 7px solid blue;
+}
+
+footer {
+    text-align: center;
 }
